--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,14 +58,16 @@ dependencies {
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
     implementation "com.squareup.okhttp3:logging-interceptor:$okHttpVersion"
 
+    implementation "org.koin:koin-android:$koinVersion"
+
 
     implementation "io.reactivex.rxjava2:rxandroid:$androidRXVersion"
     implementation "io.reactivex.rxjava2:rxjava:$androidRXVersion"
 
-    kapt "com.google.dagger:dagger-compiler:$daggerVersion"
+    /*kapt "com.google.dagger:dagger-compiler:$daggerVersion"
     implementation "com.google.dagger:dagger-android:$daggerVersion"
     implementation "com.google.dagger:dagger:$daggerVersion"
-    annotationProcessor "com.google.dagger:dagger-compiler:$daggerVersion"
+    annotationProcessor "com.google.dagger:dagger-compiler:$daggerVersion"*/
 
     implementation "com.tuyenmonkey:mkloader:$mkloader"
     implementation "org.koin:koin-android:$koinVersion"
